--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-
-  "engines": { 
+  "engines": {
     "node": ">=14.15.4",
     "npm": ">=6.14.10"
-    },
+  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.12.15",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
